packages/typ/tests/fixtures/diagnostics/0353_labels_wrong_x_type_03.ml.expected
File "0353_labels_wrong_x_type_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0353_labels_wrong_x_type_03 is not a valid module name.

File "0353_labels_wrong_x_type_03.ml", line 2, characters 22-26:
2 | let _ = pick_gamma ~x:true ~y:true
                          ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
